tests/ui/parser/float-field.stderr
error: expected at least one digit in exponent
  --> $DIR/float-field.rs:18:9
   |
LL |     { s.1e+; }
   |         ^^^

error: expected at least one digit in exponent
  --> $DIR/float-field.rs:22:9
   |
LL |     { s.1e-; }
   |         ^^^

error: hexadecimal float literal is not supported
  --> $DIR/float-field.rs:41:9
   |
LL |     { s.0x1.; }
   |         ^^^^

error: hexadecimal float literal is not supported
  --> $DIR/float-field.rs:45:9
   |
LL |     { s.0x1.1; }
   |         ^^^^^

error: hexadecimal float literal is not supported
  --> $DIR/float-field.rs:49:9
   |
LL |     { s.0x1.1e1; }
   |         ^^^^^^^

error: hexadecimal float literal is not supported
  --> $DIR/float-field.rs:65:9
   |
LL |     { s.0x1.1e+1; }
   |         ^^^^^^^^

error: hexadecimal float literal is not supported
  --> $DIR/float-field.rs:69:9
   |
LL |     { s.0x1.1e-1; }
   |         ^^^^^^^^

error: expected at least one digit in exponent
  --> $DIR/float-field.rs:85:9
   |
LL |     { s.1e+f32; }
   |         ^^^^^^

error: expected at least one digit in exponent
  --> $DIR/float-field.rs:89:9
   |
LL |     { s.1e-f32; }
   |         ^^^^^^

error: invalid tuple index
  --> $DIR/float-field.rs:8:9
   |
LL |     { s.1e1; }
   |         ^^^

error: unexpected token: `;`
  --> $DIR/float-field.rs:11:11
   |
LL |     { s.1.; }
   |           ^

error: invalid tuple index
  --> $DIR/float-field.rs:15:11
   |
LL |     { s.1.1e1; }
   |           ^^^

error: unexpected token: `1e+`
  --> $DIR/float-field.rs:18:9
   |
LL |     { s.1e+; }
   |         ^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e+`
  --> $DIR/float-field.rs:18:9
   |
LL |     { s.1e+; }
   |         ^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1e-`
  --> $DIR/float-field.rs:22:9
   |
LL |     { s.1e-; }
   |         ^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e-`
  --> $DIR/float-field.rs:22:9
   |
LL |     { s.1e-; }
   |         ^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1e+1`
  --> $DIR/float-field.rs:26:9
   |
LL |     { s.1e+1; }
   |         ^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e+1`
  --> $DIR/float-field.rs:26:9
   |
LL |     { s.1e+1; }
   |         ^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1e-1`
  --> $DIR/float-field.rs:29:9
   |
LL |     { s.1e-1; }
   |         ^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e-1`
  --> $DIR/float-field.rs:29:9
   |
LL |     { s.1e-1; }
   |         ^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1.1e+1`
  --> $DIR/float-field.rs:32:9
   |
LL |     { s.1.1e+1; }
   |         ^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1.1e+1`
  --> $DIR/float-field.rs:32:9
   |
LL |     { s.1.1e+1; }
   |         ^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1.1e-1`
  --> $DIR/float-field.rs:35:9
   |
LL |     { s.1.1e-1; }
   |         ^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1.1e-1`
  --> $DIR/float-field.rs:35:9
   |
LL |     { s.1.1e-1; }
   |         ^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: invalid tuple index
  --> $DIR/float-field.rs:38:9
   |
LL |     { s.0x1e1; }
   |         ^^^^^

error: unexpected token: `0x1.`
  --> $DIR/float-field.rs:41:9
   |
LL |     { s.0x1.; }
   |         ^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `0x1.`
  --> $DIR/float-field.rs:41:9
   |
LL |     { s.0x1.; }
   |         ^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `0x1.1`
  --> $DIR/float-field.rs:45:9
   |
LL |     { s.0x1.1; }
   |         ^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `0x1.1`
  --> $DIR/float-field.rs:45:9
   |
LL |     { s.0x1.1; }
   |         ^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `0x1.1e1`
  --> $DIR/float-field.rs:49:9
   |
LL |     { s.0x1.1e1; }
   |         ^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `0x1.1e1`
  --> $DIR/float-field.rs:49:9
   |
LL |     { s.0x1.1e1; }
   |         ^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: invalid tuple index
  --> $DIR/float-field.rs:53:9
   |
LL |     { s.0x1e+; }
   |         ^^^^

error: expected expression, found `;`
  --> $DIR/float-field.rs:53:14
   |
LL |     { s.0x1e+; }
   |              ^ expected expression

error: invalid tuple index
  --> $DIR/float-field.rs:56:9
   |
LL |     { s.0x1e-; }
   |         ^^^^

error: expected expression, found `;`
  --> $DIR/float-field.rs:56:14
   |
LL |     { s.0x1e-; }
   |              ^ expected expression

error: invalid tuple index
  --> $DIR/float-field.rs:59:9
   |
LL |     { s.0x1e+1; }
   |         ^^^^

error: invalid tuple index
  --> $DIR/float-field.rs:62:9
   |
LL |     { s.0x1e-1; }
   |         ^^^^

error: unexpected token: `0x1.1e+1`
  --> $DIR/float-field.rs:65:9
   |
LL |     { s.0x1.1e+1; }
   |         ^^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `0x1.1e+1`
  --> $DIR/float-field.rs:65:9
   |
LL |     { s.0x1.1e+1; }
   |         ^^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `0x1.1e-1`
  --> $DIR/float-field.rs:69:9
   |
LL |     { s.0x1.1e-1; }
   |         ^^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `0x1.1e-1`
  --> $DIR/float-field.rs:69:9
   |
LL |     { s.0x1.1e-1; }
   |         ^^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: invalid tuple index
  --> $DIR/float-field.rs:73:9
   |
LL |     { s.1e1f32; }
   |         ^^^^^^

error: suffixes on a tuple index are invalid
  --> $DIR/float-field.rs:73:9
   |
LL |     { s.1e1f32; }
   |         ^^^^^^ invalid suffix `f32`

error: suffixes on a tuple index are invalid
  --> $DIR/float-field.rs:79:9
   |
LL |     { s.1.1f32; }
   |         ^^^^^^ invalid suffix `f32`

error: invalid tuple index
  --> $DIR/float-field.rs:81:9
   |
LL |     { s.1.1e1f32; }
   |         ^^^^^^^^

error: suffixes on a tuple index are invalid
  --> $DIR/float-field.rs:81:9
   |
LL |     { s.1.1e1f32; }
   |         ^^^^^^^^ invalid suffix `f32`

error: unexpected token: `1e+f32`
  --> $DIR/float-field.rs:85:9
   |
LL |     { s.1e+f32; }
   |         ^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e+f32`
  --> $DIR/float-field.rs:85:9
   |
LL |     { s.1e+f32; }
   |         ^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1e-f32`
  --> $DIR/float-field.rs:89:9
   |
LL |     { s.1e-f32; }
   |         ^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e-f32`
  --> $DIR/float-field.rs:89:9
   |
LL |     { s.1e-f32; }
   |         ^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1e+1f32`
  --> $DIR/float-field.rs:93:9
   |
LL |     { s.1e+1f32; }
   |         ^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e+1f32`
  --> $DIR/float-field.rs:93:9
   |
LL |     { s.1e+1f32; }
   |         ^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1e-1f32`
  --> $DIR/float-field.rs:96:9
   |
LL |     { s.1e-1f32; }
   |         ^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e-1f32`
  --> $DIR/float-field.rs:96:9
   |
LL |     { s.1e-1f32; }
   |         ^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1.1e+1f32`
  --> $DIR/float-field.rs:99:9
   |
LL |     { s.1.1e+1f32; }
   |         ^^^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1.1e+1f32`
  --> $DIR/float-field.rs:99:9
   |
LL |     { s.1.1e+1f32; }
   |         ^^^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1.1e-1f32`
  --> $DIR/float-field.rs:102:9
   |
LL |     { s.1.1e-1f32; }
   |         ^^^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1.1e-1f32`
  --> $DIR/float-field.rs:102:9
   |
LL |     { s.1.1e-1f32; }
   |         ^^^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error[E0609]: no field `1e1` on type `S`
  --> $DIR/float-field.rs:8:9
   |
LL |     { s.1e1; }
   |         ^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0609]: no field `1e1` on type `(u8, u8)`
  --> $DIR/float-field.rs:15:11
   |
LL |     { s.1.1e1; }
   |           ^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0609]: no field `11` on type `S`
  --> $DIR/float-field.rs:38:9
   |
LL |     { s.0x1e1; }
   |         ^^^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0369]: cannot add `{integer}` to `(u8, u8)`
  --> $DIR/float-field.rs:59:13
   |
LL |     { s.0x1e+1; }
   |       ------^- {integer}
   |       |
   |       (u8, u8)

error[E0369]: cannot subtract `{integer}` from `(u8, u8)`
  --> $DIR/float-field.rs:62:13
   |
LL |     { s.0x1e-1; }
   |       ------^- {integer}
   |       |
   |       (u8, u8)

error[E0609]: no field `1e1` on type `S`
  --> $DIR/float-field.rs:73:9
   |
LL |     { s.1e1f32; }
   |         ^^^^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0609]: no field `f32` on type `(u8, u8)`
  --> $DIR/float-field.rs:77:11
   |
LL |     { s.1.f32; }
   |           ^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0609]: no field `1e1` on type `(u8, u8)`
  --> $DIR/float-field.rs:81:9
   |
LL |     { s.1.1e1f32; }
   |         ^^^^^^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error: aborting due to 66 previous errors

Some errors have detailed explanations: E0369, E0609.
For more information about an error, try `rustc --explain E0369`.
